# platformer

./: go.mod  main.go
platformer/: Cargo.toml
platformer/assets/sprites/: sprites.go
platformer/src/: main.rs
player/: player.go
rectangle/: rectangle.go
