[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.13.1"
features = ["dynamic_linking"] # TODO doesn't work with wasm32

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
